NEW: configurable to only export certain tables easier. Also show progress of export, to give clues about current activity of the application. Fixes issue #2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2020-xx-xx, v1.x.x.x
+
+** CHANGE **
+- Display current export progress of current table's data.
+	Provides UI feedback.
+
+
 2020-03-09, v1.1.14.19119
 
 ** FIX **
