Updated .NET framework to 4.8 and NLog to v5.4.0.3182.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2025-02-04, v1.4.0.16857
+
+** CHANGE **
+- Updated solution to .NET framework 4.8
+- Updated NLog to v5.4.0.3182
+
 2020-06-08, v1.2.28.15251
 
 ** CHANGE **
